tests/rosetta/out/Pascal/attractive-numbers.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/attractive-numbers.pas
attractive-numbers.pas(36,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
attractive-numbers.pas(42,22) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" + "ShortInt"
attractive-numbers.pas(54,13) Error: Incompatible types: got "<procedure variable type of function(Variant):LongInt is nested;Register>" expected "LongInt"
attractive-numbers.pas(80,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Variant is nested;Register>"
attractive-numbers.pas(81,71) Error: Incompatible type for arg no. 1: Got "<procedure variable type of function(Variant):Variant is nested;Register>", expected "QWord"
attractive-numbers.pas(82,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
attractive-numbers.pas(86,12) Error: Operator is not overloaded: "LongInt" <= "<procedure variable type of function(Variant):Variant is nested;Register>"
attractive-numbers.pas(92,22) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" + "ShortInt"
attractive-numbers.pas(109) Fatal: There were 8 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
