tests/rosetta/out/Pascal/attractive-numbers.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:11Z
program AttractiveNumbers;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function isPrime(n: integer): boolean;
var
  d: integer;
begin
  if (n < 2) then ;
  if (n mod 2 = 0) then ;
  if (n mod 3 = 0) then ;
  d := 5;
  while (d * d <= n) do
  begin
    if (n mod d = 0) then ;
    d := d + 2;
    if (n mod d = 0) then ;
    d := d + 4;
  end;
  result := True;
  exit;
end;

function countPrimeFactors(n: integer): integer;
var
  count: function(p0: Variant): integer is nested;
  f: integer;
begin
  if (n = 1) then ;
  if isPrime(n) then ;
  count := 0;
  f := 2;
  while True do
  begin
    if (n mod f = 0) then
    begin
      count := count + 1;
      n := n div f;
      if (n = 1) then ;
      if isPrime(n) then ;
    end else if (f >= 3) then
    begin
      f := f + 2;
    end else
    begin
      f := 3;
    end;
  end;
  result := count;
  exit;
end;

function pad4(n: integer): string;
var
  s: Variant;
begin
  s := IntToStr(n);
  while (Length(s) < 4) do
  begin
    s := ' ' + s;
  end;
  result := s;
  exit;
end;

function main(): integer;
var
  c: Variant;
  count: function(p0: Variant): integer is nested;
  i: integer;
  line: string;
  lineCount: integer;
  max: function(p0: Variant): Variant is nested;
begin
  max := 120;
  writeln('The attractive numbers up to and including ' + IntToStr(max) + ' are:');
  count := 0;
  line := '';
  lineCount := 0;
  i := 1;
  while (i <= max) do
  begin
    c := countPrimeFactors(i);
    if isPrime(c) then
    begin
      line := line + pad4(i);
      count := count + 1;
      lineCount := lineCount + 1;
      if (lineCount = 20) then
      begin
        writeln(line);
        line := '';
        lineCount := 0;
      end;
    end;
    i := i + 1;
  end;
  if (lineCount > 0) then ;
end;

begin
  main();
end.
